GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/SalesforceTicketUpgradeRedemption__x.object-meta.xml
<CustomObject>
    <description>SalesforceTicketUpgradeRedemption</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceTicketUpgradeRedemption</externalName>
    <label>Upgrade with points</label>
    <pluralLabel>Upgrade with points</pluralLabel>
</CustomObject>