GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/FromTravelClassCode__c.field-meta.xml
<CustomField>
    <fullName>FromTravelClassCode__c</fullName>
    <description>FromTravelClassCode</description>
    <externalDeveloperName>FromTravelClassCode</externalDeveloperName>
    <label>From travel class code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>