GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/FromTravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>FromTravelClassDescription__c</fullName>
    <description>FromTravelClassDescription</description>
    <externalDeveloperName>FromTravelClassDescription</externalDeveloperName>
    <label>From travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>