GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/JourneyTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>JourneyTypeDescription__c</fullName>
    <description>JourneyTypeDescription</description>
    <externalDeveloperName>JourneyTypeDescription</externalDeveloperName>
    <label>Journey type description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>