GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/PointsCost__c.field-meta.xml
<CustomField>
    <fullName>PointsCost__c</fullName>
    <description>PointsCost</description>
    <externalDeveloperName>PointsCost</externalDeveloperName>
    <label>Points cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>