GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/ToTravelClassCode__c.field-meta.xml
<CustomField>
    <fullName>ToTravelClassCode__c</fullName>
    <description>ToTravelClassCode</description>
    <externalDeveloperName>ToTravelClassCode</externalDeveloperName>
    <label>To travel class code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>