GearsetPOC/force-app/main/default/objects/SalesforceTicketUpgradeRedemption__x/fields/ToTravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>ToTravelClassDescription__c</fullName>
    <description>ToTravelClassDescription</description>
    <externalDeveloperName>ToTravelClassDescription</externalDeveloperName>
    <label>To travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>